@@ -25,6 +25,7 @@ git - ?
 	- All languages are listed on /r and /v/all instead of only those in use
 	- Copy over search query when switching search type (htmlSearchBox)
 	- Fixed obscure sorting bug on user VN list
+	- Fixed calculation of tags_vn_bayesian.spoiler
 
 2.7 - 2009-09-24
 	- Improved styling of the threeboxes layout
